--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4  # CHANGED: v3 → v4
         with:
-          node-version: '18'
+          node-version: '22'  # CHANGED: 18 → 22 (LTS)
           cache: 'npm'
           
       - name: Install dependencies
@@ -38,10 +38,10 @@ jobs:
         uses: actions/configure-pages@v3
         
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3  # CHANGED: v2 → v3
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
           
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4  # CHANGED: v2 → v4
+        uses: actions/deploy-pages@v4
